# zeb-aggregator

./: .env  Cargo.toml  README.md  build.rs  test.py
src/: lib.rs
src/db/: connection.rs  mod.rs
src/db/entities/: clock_infos.rs  merge_logs.rs  mod.rs  node_info.rs  prelude.rs  z_messages.rs
src/db/migration/: m20240526_103941_create_clock_infos_table.rs  m20240526_104001_create_merge_logs_table.rs  m20240526_104014_create_node_info_table.rs  m20240526_104032_create_z_messages_table.rs  mod.rs
src/nodes/: node.rs
src/proto/: bussiness.proto  gateway.proto  innermsg.proto  vlc.proto  zmessage.proto
src/restful/: response.rs
